# financial-sentiment-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/raw/: README.md  Sentences_50Agree.txt
notebooks/: 01-data-loading.ipynb  02-eda.ipynb  03-preprocessing.ipynb  04-classical-ml.ipynb  05-finetuned-ml.ipynb
