[project]
name = "financial-sentiment-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "cnxls",email = "oles.melinyshyn2007@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "datasets (>=4.5.0,<5.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "optuna (>=4.7.0,<5.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "transformers (>=5.2.0,<6.0.0)",
    "torch (>=2.10.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
priority = "supplemental"

[tool.poetry.dependencies]
torch = {source = "pytorch-cu126"}
